[gd_scene load_steps=4 format=3 uid="uid://s7e8nvikdbsw"]

[ext_resource type="Script" path="res://Assets/Scripts/UI/Menus/MainMenu.gd" id="1_7x3am"]
[ext_resource type="Texture2D" uid="uid://nw51dsnvsjh7" path="res://Assets/Art/Props/test/test_object6.png" id="1_y3vd2"]
[ext_resource type="Theme" path="res://Assets/User-Interface/Themes/ButtonTheme.tres" id="3_pm8mg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7x3am")
next_scene = "res://Scenes/Area1Scene.tscn"
credits_scene = "res://Scenes/CreditsScene.tscn"

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MainScreen" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 18

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MainScreen"]
layout_mode = 2

[node name="TitleBox" type="NinePatchRect" parent="HBoxContainer/MainScreen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
texture = ExtResource("1_y3vd2")
region_rect = Rect2(-353, -89.5, 507, 233)

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MainScreen/TitleBox"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Bouncy Bear[/center]"
fit_content = true

[node name="StartSettings" type="VBoxContainer" parent="HBoxContainer/MainScreen"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/separation = 190
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MainScreen/StartSettings"]
layout_mode = 2

[node name="Start Game" type="Button" parent="HBoxContainer/MainScreen/StartSettings"]
custom_minimum_size = Vector2(310, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_pm8mg")
theme_override_font_sizes/font_size = 40
text = "Start
Game"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/MainScreen/StartSettings"]
layout_mode = 2

[node name="CreditsExit" type="VBoxContainer" parent="HBoxContainer/MainScreen"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="Settings" type="Button" parent="HBoxContainer/MainScreen/CreditsExit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_pm8mg")
text = "Settings"

[node name="ControlGuide" type="Button" parent="HBoxContainer/MainScreen/CreditsExit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_pm8mg")
text = "Control
Guide"

[node name="Credits" type="Button" parent="HBoxContainer/MainScreen/CreditsExit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_pm8mg")
text = "Credits"

[node name="Exit Game" type="Button" parent="HBoxContainer/MainScreen/CreditsExit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_pm8mg")
text = "Exit 
Game"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/MainScreen"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/MainScreen/StartSettings/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="HBoxContainer/MainScreen/CreditsExit/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/MainScreen/CreditsExit/ControlGuide" to="." method="_on_control_guide_pressed"]
[connection signal="pressed" from="HBoxContainer/MainScreen/CreditsExit/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="HBoxContainer/MainScreen/CreditsExit/Exit Game" to="." method="_on_exit_game_pressed"]
